--- a/styles/creagroup.css
+++ b/styles/creagroup.css
@@ -1,4 +1,4 @@
-/* Styles gÃƒÂ©nÃƒÂ©raux */
+/* Styles généraux */
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
@@ -27,7 +27,8 @@ header img {
 }
 
 #titre {
-    color: rgb(130, 157, 238);
+    color: #3a1768;
+    text-align: center; /* Centrer le texte du titre */
 }
 
 .accueil {
@@ -47,7 +48,7 @@ a {
     margin-top: 10px;
     text-decoration: none;
     color: #333;
-    text-align : center;
+    text-align: center;
 }
 
 h1 {
@@ -56,7 +57,7 @@ h1 {
     margin: 0;
 }
 
-/* Menu dÃƒÂ©roulant des paramÃƒÂ¨tres */
+/* Menu déroulant des paramètres */
 .menu-parametres {
     position: relative;
     display: inline-block;
@@ -122,7 +123,7 @@ table td:last-child {
 .menu-options {
     display: none;
     position: absolute;
-    top: 75%; /* DÃƒÂ©cale le menu en dessous */
+    top: 75%; /* Décale le menu en dessous */
     left: 47.2%;
     transform: translateX(-50%);
     background-color: #3a1768;
@@ -191,11 +192,11 @@ h2::before, h3::before {
     font-size: 1.8em; /* Taille de la puce */
     color: #3a1768; /* Couleur de la puce */
 }
+
 form {
-    /* width: 100%; */ /* S'adapte ÃƒÂ  la largeur de son conteneur */
-    max-width: 500px; /* Largeur maximale pour ÃƒÂ©viter qu'il ne devienne trop grand */
+    max-width: 500px; /* Largeur maximale pour éviter qu'il ne devienne trop grand */
     margin: 0 auto; /* Centre le formulaire horizontalement */
-    padding: 20px; /* Ajoute de l'espace ÃƒÂ  l'intÃƒÂ©rieur du formulaire */
+    padding: 20px; /* Ajoute de l'espace à l'intérieur du formulaire */
     background-color: #e2e2e2; /* Fond blanc pour le contraste */
     border-radius: 8px; /* Coins arrondis */
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Ombre douce */
@@ -226,7 +227,7 @@ input[type="password"]:focus,
 select:focus,
 textarea:focus {
     border-color: #3a1768; /* Couleur de bordure au focus */
-    outline: none; /* Supprime le contour par dÃƒÂ©faut */
+    outline: none; /* Supprime le contour par défaut */
 }
 
 button {
@@ -250,9 +251,7 @@ footer {
     color: #fff;
     padding: 15px;
     position: sticky;
-    /* position: fixed; */
     bottom: 0;
-    /* width: auto; */
     text-align: center;
     font-weight: normal;
 }
