--- a/styles/groupe.css
+++ b/styles/groupe.css
@@ -341,3 +341,17 @@ footer p {
     height: auto;
     margin-left: 10px;
 }
+
+/* Styles pour le bouton de suppression */
+.btn-delete {
+    background-color: #ff0000; /* Rouge */
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+.btn-delete:hover {
+    background-color: #cc0000; /* Rouge plus foncé au survol */
+}
