--- a/styles/connexionCompte.css
+++ b/styles/connexionCompte.css
@@ -62,10 +62,11 @@ button {
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
+    transition: background-color 0.3s ease;
 }
 
 button:hover {
-    background-color: #555;
+    background-color: #6a2a88;
 }
 
 /* Lien vers la crÃ©ation de compte */
@@ -96,4 +97,8 @@ footer {
 
 footer p {
     margin: 0;
+}
+
+b{
+    color : #3a1768
 }
