--- a/styles/creacompte.css
+++ b/styles/creacompte.css
@@ -14,10 +14,8 @@ label {
 header {
     background-color: #3a1768;
     color: #fff;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 10px;
+    padding: 15px 0;
+    text-align: center;
 }
 
 header img {
@@ -329,4 +327,8 @@ footer p {
 
 b{
     color : #3a1768
+}
+
+a:hover {
+    text-decoration: underline;
 }
