--- a/styles/connexionCompte.css
+++ b/styles/connexionCompte.css
@@ -44,8 +44,7 @@ h4 {
     margin-bottom: 15px;
 }
 
-input[type="email"],
-input[type="password"] {
+input[type="email"], input[type="password"], input[type="text"] {
     width: 96%;
     padding: 10px;
     margin: 5px 0;
