--- a/styles/groupe.css
+++ b/styles/groupe.css
@@ -438,3 +438,36 @@ nav ul li a.active {
     background-color: #ffcc00;
     color: #3a1768;
 }
+
+        /* Style pour le bouton de défilement */
+        #scrollButton {
+            display: none; /* Masqué par défaut */
+            position: fixed;
+            bottom: 20px;
+            right: 30px;
+            z-index: 99;
+            font-size: 18px;
+            border: none;
+            outline: none;
+            background-color: #555;
+            color: white;
+            cursor: pointer;
+            padding: 15px;
+            border-radius: 4px;
+        }
+
+        #scrollButton:hover {
+            background-color: #333;
+        }
+
+/* Style pour le bouton d'invitation */
+.right-button {
+    float: right;
+    margin-bottom: 10px;
+}
+
+/* Style pour le conteneur du formulaire d'invitation */
+#inviteUserForm {
+    clear: both; /* Assure que le formulaire ne flotte pas à côté du bouton */
+    margin-top: 10px;
+}
